--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -39,6 +39,25 @@
                 {{/each}}
               </div>
             {{/ui-dropdown}}
+
+            {{#if (eq properties.action "join")}}
+              {{#ui-dropdown class="selection fluid" onChange=(action "addColumn" field) as |execute mapper|}}
+                <div class="default text">
+                    Source column headings
+                </div>
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                  {{#each columnHeadings as |heading|}}
+                    <div class="item" data-value="{{map-value mapper heading}}">
+                      {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+                    </div>
+                  {{/each}}
+                </div>
+              {{/ui-dropdown}}
+            {{/if}}
+
+
+
             {{#if (eq properties.action "join")}}
               <button class="ui button basic blue" onClick={{action "removeAction" field}}>Remove join <i class="remove icon"></i></button>
             {{else if (eq properties.action "split")}}
