--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,24 +5,12 @@
   cursor: pointer;
 }
 
-.review.ui.button {
-  margin: 0px;
-}
-
-.review-nav .ui.button {
-  margin: 15px 0px;
-}
-
-.field .ui.button.active {
-  background: #508478;
-  color: white;
-}
-
 .ui.inverted.vertical.masthead.center.aligned.segment.teal {
   padding-bottom: 0px;
   margin-bottom: 30px;
 }
 
+/* general font size styling */
 h1 {
   font-size: 48px !important;
 }
@@ -43,6 +31,7 @@ h5 {
   font-size: 16px !important;
 }
 
+/* add feed progress tabs styling */
 nav {
   padding: 0px;
   margin: 0px;
@@ -63,8 +52,32 @@ nav ul li {
   border-bottom: solid 3px gray;
 }
 
-.active {
+nav ul li.active {
   color: white;
   font-weight: bold;
   border-bottom: solid 3px white;
+}
+
+/* styling for more-info page */
+.ui.form.field {
+  margin-top: 0.5em;
+}
+
+.field .ui.button.active {
+  background: #508478;
+  color: white;
+}
+
+.divider.column {
+  position: relative;
+  padding: 25px;
+}
+
+/* styling for review page */
+.edit.ui.button {
+  margin: 0px;
+}
+
+.review-nav .ui.button {
+  margin: 15px 0px;
 }
