--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -12,12 +12,13 @@
       {{#each-in model.submission.exampleRows as |rows fields|}}
         <tr>
           {{#each-in fields as |field label|}}
-            <td class={{if (eq currentField field) "active"}}>{{label}}</td>
+            <td>{{label}}</td>
           {{/each-in}}
         </tr>
       {{/each-in}}
     </tbody>
   </table>
+
   {{#each-in model.submission.oaFields as |field properties|}}
     <form class="ui form segment">
       <div class="field">
