--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -3,17 +3,17 @@
   <p>
     Provide link to data or upload data. (add information about accepted formats)
   </p>
-  <div class="ui labeled input">
+  <div class="ui labeled input" data-tooltip="arcgis, amazon" data-position="left center" data-inverted>
     <div class="ui label">
       URL
     </div>
     <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
   </div>
-  <div>
-    or
+  <div class="ui horizontal divider">
+    Or
   </div>
   <div>
-    <label for="uploadfile" class="ui icon button">
+    <label for="uploadfile" class="ui icon button" data-title="Accepted Formats" data-tooltip="csv, geojson" data-position="bottom left">
       <i class="file icon"></i>
       Choose file to upload
     </label>
