--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -13,7 +13,7 @@
     Or
   </div>
   <div>
-    <label for="uploadfile" class="ui icon button" data-title="Accepted Formats" data-tooltip="csv, geojson" data-position="bottom left">
+    <label for="uploadfile" class="ui icon button" data-title="Accepted Formats" data-tooltip="csv, geojson" data-position="bottom center" data-inverted>
       <i class="file icon"></i>
       Choose file to upload
     </label>
