--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,7 +6,7 @@
 	<div class="ui vertical stripe segment"></div>
   <nav class="progress">
     <ul>
-      <li class={{if (eq currentRouteName 'intro') "active"}}> Feed </li>
+      <li class={{if (eq currentRouteName 'intro') "active"}}> Data </li>
       <li class={{if (eq currentRouteName 'more-info') "active"}}> More Info </li>
       <li class={{if (eq currentRouteName 'mapping.index') "active"}}> Column Mapping </li>
       <li class={{if (eq currentRouteName 'contact') "active"}}> Contact Info </li>
