Review Page styling changes: margin-top and bottom of segment dividers are smaller; div containing Link to Data is now a three column in order to fit the words

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -5,7 +5,7 @@
     <div class="ui clearing divider"></div>
     <div class="ui five column grid">
       <div class="row">
-        <div class="two wide column">
+        <div class="three wide column">
           {{#if model.data_url}}Link to data{{/if}}
           {{#if model.data_file}}Data upload file name{{/if}}
         </div>
