--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -93,6 +93,7 @@
     <button class="edit ui right floated labeled blue basic icon button mini" onClick={{action "editField" "contact"}}><i class="icon edit"></i>Edit</button>
     <div class="ui clearing divider"></div>
     <div class="ui five column grid">
+      {{#if model.maintainer_email}}
       <div class="row">
         <div class="two wide column">
           Email
@@ -101,6 +102,7 @@
           {{model.maintainer_email}}
         </div>
       </div>
+      {{/if}}
       {{#if model.maintainer_name}}
         <div class="ui section divider"></div>
         <div class="row">
