--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -12,7 +12,7 @@
       {{#each-in model.submission.exampleRows as |rows fields|}}
         <tr>
           {{#each-in fields as |field label|}}
-            <td>{{#each label as |aaa|}}{{aaa}} {{/each}}</td>
+            <td>{{#each label as |value|}}{{value}} {{/each}}</td>
           {{/each-in}}
         </tr>
       {{/each-in}}
@@ -41,6 +41,9 @@
             {{/ui-dropdown}}
 
             {{#if (eq properties.action "join")}}
+              <a class="item">
+                <i class="plus icon"></i>
+              </a>
               {{#ui-dropdown class="selection fluid" onChange=(action "addColumn" field) as |execute mapper|}}
                 <div class="default text">
                     Source column headings
@@ -55,11 +58,43 @@
                 </div>
               {{/ui-dropdown}}
             {{/if}}
-
-
+            
+            {{#each-in properties as |property value|}}
+              {{#if (eq property "columns")}}
+                {{#each value as |column index|}}
+                  column: {{column}}<br>
+                  index: {{index}}<br>
+                  {{#each-in column as |aaa bbb|}}aaa: {{aaa}}, bbb: {{bbb}}<br>{{/each-in}}
+                {{/each}}
+              {{/if}}
+            {{/each-in}}
+            
+            {{#if showAdditionalJoinOption}}
+              <div class="two wide column">
+                <a class="item">
+                  <i class="plus icon"></i>
+                </a>
+              </div>
+              <div class="seven wide column">
+                {{#ui-dropdown class="selection fluid" onChange=(action "addColumn" field) as |execute mapper|}}
+                  <div class="default text">Source column headings</div>
+                  <i class="dropdown icon"></i>
+                  <div class="menu">
+                    {{#each columnHeadings as |heading|}}
+                      <div class="item" data-value="{{map-value mapper heading}}">
+                        {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+                      </div>
+                    {{/each}}
+                  </div>
+                {{/ui-dropdown}}
+              </div>
+            {{/if}}
 
             {{#if (eq properties.action "join")}}
-              <button class="ui button basic blue" onClick={{action "removeAction" field}}>Remove join <i class="remove icon"></i></button>
+              <div>
+                <button class="ui button basic blue" onClick={{action "addJoin" field}}>Join another column <i class="plus icon"></i></button>
+                <button class="ui button basic blue" onClick={{action "removeAction" field}}>Remove join <i class="remove icon"></i></button>
+              </div>
             {{else if (eq properties.action "split")}}
               <button class="ui button basic blue" onClick={{action "removeAction" field}}>Remove split <i class="remove icon"></i></button>
             {{else}}
