--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -39,56 +39,31 @@
                 {{/each}}
               </div>
             {{/ui-dropdown}}
-
-            {{#if (eq properties.action "join")}}
-              <a class="item">
-                <i class="plus icon"></i>
-              </a>
-              {{#ui-dropdown class="selection fluid" onChange=(action "addColumn" field) as |execute mapper|}}
-                <div class="default text">
-                    Source column headings
-                </div>
-                <i class="dropdown icon"></i>
-                <div class="menu">
-                  {{#each columnHeadings as |heading|}}
-                    <div class="item" data-value="{{map-value mapper heading}}">
-                      {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
-                    </div>
-                  {{/each}}
-                </div>
-              {{/ui-dropdown}}
-            {{/if}}
             
             {{#each-in properties as |property value|}}
               {{#if (eq property "columns")}}
                 {{#each value as |column index|}}
-                  column: {{column}}<br>
-                  index: {{index}}<br>
-                  {{#each-in column as |aaa bbb|}}aaa: {{aaa}}, bbb: {{bbb}}<br>{{/each-in}}
+                  {{#if (eq properties.action "join")}}
+                    <a class="item">
+                      <i class="plus icon"></i>
+                    </a>
+                    {{#ui-dropdown class="selection fluid" onChange=(action "addColumn" field index) as |execute mapper|}}
+                      <div class="default text">
+                          Source column headings
+                      </div>
+                      <i class="dropdown icon"></i>
+                      <div class="menu">
+                        {{#each columnHeadings as |heading|}}
+                          <div class="item" data-value="{{map-value mapper heading}}">
+                            {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+                          </div>
+                        {{/each}}
+                      </div>
+                    {{/ui-dropdown}}
+                  {{/if}}
                 {{/each}}
               {{/if}}
             {{/each-in}}
-            
-            {{#if showAdditionalJoinOption}}
-              <div class="two wide column">
-                <a class="item">
-                  <i class="plus icon"></i>
-                </a>
-              </div>
-              <div class="seven wide column">
-                {{#ui-dropdown class="selection fluid" onChange=(action "addColumn" field) as |execute mapper|}}
-                  <div class="default text">Source column headings</div>
-                  <i class="dropdown icon"></i>
-                  <div class="menu">
-                    {{#each columnHeadings as |heading|}}
-                      <div class="item" data-value="{{map-value mapper heading}}">
-                        {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
-                      </div>
-                    {{/each}}
-                  </div>
-                {{/ui-dropdown}}
-              </div>
-            {{/if}}
 
             {{#if (eq properties.action "join")}}
               <div>
