added spacing between nav buttons and last segment

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -160,6 +160,7 @@
       {{/if}}
     {{/each-in}}
   </div>
+  <div class="ui hidden divider"></div>
   <div class="review-nav">
     <button class="ui button red left floated" onClick={{action "openModal" "review-cancel"}}>Cancel</button>
     <button class="ui button green right floated" onClick={{action "submit"}}>Submit</button>
