--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -88,7 +88,7 @@
     <div class="ui five column grid">
       {{#if model.maintainer_email}}
       <div class="row">
-        <div class="two wide column">
+        <div class="four wide column">
           <div class="field label">Email</div>
         </div>
         <div class="fluid column">
@@ -99,7 +99,7 @@
       {{#if model.maintainer_name}}
         <div class="ui fitted divider"></div>
         <div class="row">
-          <div class="two wide column">
+          <div class="four wide column">
             <div class="field label">Name</div>
           </div>
           <div class="fluid column">
