--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -62,9 +62,7 @@
       <div class="field">
         <label>Frequency of update</label>
         {{#ui-dropdown class="selection" selected=model.update_frequency onChange=(action "setFrequency") as | execute mapper|}}
-          <div class="default text">
-            Frequency
-          </div>
+          <div class="default text">Frequency</div>
           <i class="dropdown icon"></i>
           <div class="menu">
             {{#each frequencies as | frequency |}}
