--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -39,14 +39,17 @@ nav {
 }
 
 nav ul {
+  display: inline-flex;
+  justify-content: center;
+  align-items: flex-end;
   padding: 0px;
   margin: 0px;
+  list-style: none;
 }
 
 nav ul li {
-  display: inline-block;
-  padding: 10px 15px 5px 15px;
-  margin: 0px 20px;
+  padding: 10px 10px 5px 10px;
+  margin: 0px 15px;
   color: lightgray;
   letter-spacing: 2px;
   border-bottom: solid 3px gray;
@@ -56,6 +59,16 @@ nav ul li.active {
   color: white;
   font-weight: bold;
   border-bottom: solid 3px white;
+}
+
+@media only screen
+  and (max-width: 510px) {
+    nav ul li {
+      display: none;
+    }
+    nav ul li.active {
+      display: block;
+    }
 }
 
 /* styling for more-info page */
