--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -75,8 +75,8 @@ nav ul li.active {
 }
 
 /* styling for more-info page */
-.ui.form.field {
-  margin-top: 0.5em;
+.ui.form .inline.field {
+  margin-top: 1em;
 }
 
 .field .ui.button.active {
