add in nav buttons

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -122,4 +122,5 @@
       </div>
     </form>
   {{/each-in}}
+  {{nav-buttons sendChangeRoute="changeRoute" back="source" next="data-format"}}
 </div>
