--- a/app/templates/license.hbs
+++ b/app/templates/license.hbs
@@ -54,5 +54,5 @@
       {{/if}}
     {{/unless}}
   </div>
-  {{nav-buttons sendChangeRoute="changeRoute" back="source" next="mapping"}}
+  {{nav-buttons sendChangeRoute="changeRoute" back="source" next="data-format"}}
 </div>
