--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -122,5 +122,5 @@
       </div>
     </form>
   {{/each-in}}
-  {{nav-buttons sendChangeRoute="changeRoute" back="source" next="data-format"}}
+  {{nav-buttons sendChangeRoute="changeRoute" back="license" next="contact"}}
 </div>
